--- a/.editorconfig
+++ b/.editorconfig
@@ -1,18 +1,30 @@
-; top-most EditorConfig file
-root = true
+; This file is for unifying the coding style for different editors and IDEs.
+; More information at http://editorconfig.org
 
-; Unix-style newlines
+root = true
 [*]
-end_of_line = LF
+charset = utf-8
+indent_size = 4
+indent_style = space
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
 
 [*.php]
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
 
 [*.{yml,yml.dist}]
 indent_style = space
 indent_size = 4
-trim_trailing_whitespace = true
-insert_final_newline = true
+
+[*.{orm.yml}]
+indent_style = space
+indent_size = 2
+
+[*.json]
+indent_style = space
+indent_size = 4
