--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 
-# Cache and logs (Symfony2)
+# Cache and logs
 /app/cache/*
 /app/logs/*
 !app/cache/.gitkeep
@@ -10,6 +10,5 @@
 /app/config.yml
 
 # Managed by Composer
-/composer.phar
-/composer.lock
-/vendor/
+/bin
+/vendor
