--- a/.editorconfig
+++ b/.editorconfig
@@ -1,30 +1,15 @@
-; This file is for unifying the coding style for different editors and IDEs.
-; More information at http://editorconfig.org
-
+; top-most EditorConfig file
 root = true
+
+; Unix-style newlines
 [*]
-charset = utf-8
-indent_size = 4
+charset = UTF-8
+end_of_line = LF
 indent_style = space
-end_of_line = lf
-insert_final_newline = true
+indent_size = 4
 trim_trailing_whitespace = true
+insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
-
-[*.php]
-indent_style = space
-indent_size = 4
-
-[*.{yml,yml.dist}]
-indent_style = space
-indent_size = 4
-
-[*.{orm.yml}]
+[*.{js,css}]
 indent_style = space
 indent_size = 2
-
-[*.json]
-indent_style = space
-indent_size = 4
