--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,17 @@
 # Path-based git attributes
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
-# Ignore all test and documentation with "export-ignore".
-/.editorconfig     export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
+
+## uncomment next lines to get clean project
+
+## development files
+#/.editorconfig    export-ignore
+#/.gitattributes   export-ignore
+#/.gitignore       export-ignore
+#/.standards       export-ignore
+#/.php_cs          export-ignore
+#/.scrutinizer.yml export-ignore
+#/phpunit.xml.dist export-ignore
+
+## md files
+#/LICENSE.md          export-ignore
+#/README.md        export-ignore
