--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,16 @@
 {
     "name": "fnayou/master-cli",
-    "description": "minimalistic cli tool made with fnayou/slave (based on symfony/console)",
-    "type": "framework",
+    "description": "ready to use minimalistic cli project  (based on symfony/console)",
+    "type": "project",
     "homepage": "https://github.com/fnayou/master-cli",
     "license": "MIT",
     "authors": [
         {
             "name": "Aymen FNAYOU",
             "email": "fnayou.aymen@gmail.com",
-            "homepage": "http://aymen-fnayou.com",
             "role": "Developer"
         }
     ],
-    "require": {
-        "php": ">=5.6.0",
-        "fnayou/slave": "^1.0",
-        "symfony/debug": "^3.1"
-    },
-    "require-dev": {
-        "escapestudios/symfony2-coding-standard": "^2.9",
-        "fnayou/standards": "^1.0",
-        "friendsofphp/php-cs-fixer": "^1.12",
-        "phpunit/phpunit": "5.1.4",
-        "symfony/debug": "^3.1",
-        "symfony/var-dumper": "^3.1"
-    },
     "autoload" : {
         "psr-4" : {
             "": "src/"
@@ -35,21 +21,27 @@
             "Tests\\": "tests/"
         }
     },
+    "require": {
+        "php": ">=5.6.0",
+        "fnayou/slave": "^1.0"
+    },
+    "require-dev": {
+        "escapestudios/symfony2-coding-standard": "^2.10",
+        "fnayou/standards": "^1.2",
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "phpunit/phpunit": "5.5",
+        "symfony/debug": "^3.3",
+        "symfony/var-dumper": "^3.3"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
-        ],
-        "test": "bin/phpunit",
-        "stdr": "bin/standards",
-        "fix": "bin/php-cs-fixer --level=symfony fix src/"
+        ]
     },
     "config": {
-        "platform": {
-            "php": "5.6.0"
-        },
         "bin-dir": "bin",
         "sort-packages": true
     },
@@ -58,5 +50,8 @@
             "parameter-key": "config",
             "file": "app/config.yml"
         }
+    },
+    "branch-alias" : {
+        "dev-master" : "1.0.x-dev"
     }
 }
